<resources>
    <string name="app_name">Leaving The Nest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_us_menu">About us</string>
    <string name="navigate">Navigate</string>
    <string name="watch_videos">Watch Videos</string>
    <string name="ask_questions">Ask Questions</string>
    <string name="mission_text">Leaving The Nest is an app made to ease the difficult transition from life at home to life at college.
    We hope to help our users during this time in their lives by providing them with helpful information and useful tools to stay on top of things
    while preparing for this step in their lives.</string>
    <string name="mission">- Our Mission -</string>

    <string name="safety_tips">Safety Tips</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="to_do_list">To Do List</string>
    <string name="delete_list">Delete List</string>
    <string name="title">Title</string>
    <string name="importance_choice">importance choice</string>
    <string name="save">SAVE</string>
    <string name="description">Description</string>
    <string name="cancel">CANCEL</string>
    <string name="press_the_button_in_the_bottom_right_corner_to_add_items_to_your_to_do_list">Press the button in the bottom right corner to add items to your To-Do List!</string>
    <string-array name="spinner_array">
        <item>Urgent</item>
        <item>Important</item>
        <item>Relaxed</item>
    </string-array>
</resources>